# Tripwire

./: .env.example  .gitignore  ARCHITECTURE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SUPPORT.md  package.json  server.json
.githooks/: pre-push
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml  security-review.yml
npm/: README.md  install.js  package.json
plugin/: default.project.json  package-lock.json  package.json  serve.project.json
plugin/src/: backdoor.ts  base64.ts  capture.ts  edit.ts  identity.ts  main.server.ts  playtest.ts  protocol.ts  read.ts  scripts.ts  spatial.ts  studio.ts
plugin/test/: base64.test.luau  read.test.luau  runner.test.luau
runner/: runner.luau
sample-game/: default.project.json  package-lock.json  package.json  tsconfig.json
sample-game/src/client/: main.client.ts
sample-game/src/server/: main.server.ts
sample-game/src/shared/: economy.spec.ts  economy.ts  remotes.ts
sample-game/src/shared/harness/: runTests.ts  testkit.ts
server/: Cargo.toml  package-lock.json  package.json  tsconfig.json
server/data/: api-dump.min.json  build_api_dump.py
server/src/: assets.rs  assets.ts  backdoor.rs  bridge.rs  bridge.ts  classinfo.rs  cloud.rs  cloud.ts  env.rs  harness.rs  harness.ts  httpx.rs  index.ts  main.rs  opencloud.rs  opencloud.ts  playtest.rs  playtest.ts  publish.rs  publish.ts  reviewCli.ts  screenshot.rs  security.rs  security.ts
