[package]
name = "tripwire-server"
version = "0.1.0"
edition = "2021"
description = "Tripwire MCP server: drives Roblox Studio and Open Cloud for an MCP client"
license = "MIT"

[[bin]]
name = "tripwire-server"
path = "src/main.rs"

[dependencies]
rmcp = { version = "1.8", features = ["server", "macros", "schemars", "transport-io"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time", "io-std", "net", "signal"] }
axum = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
percent-encoding = "2"
dotenvy = "0.15"
swc_core = { version = "71", features = ["common", "ecma_ast", "ecma_parser", "ecma_visit"] }

[profile.release]
strip = true
lto = "thin"
